<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ai.demo.ui.OcrDectActivity">


    <ImageView
        android:scaleType="centerInside"
        android:layout_width="50dp"
        android:layout_height="20dp"
        app:srcCompat="@mipmap/back"
        android:id="@+id/iv_back"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="blackClick"
        android:contentDescription="@string/black"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title_name_entity"
            android:textColor="@color/colorOrange"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">


        <EditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="2dp"
            android:hint="请输文本"
            android:textSize="16sp"
            android:inputType="text"
            android:background="@null"/>

        <TextView
            android:id="@+id/text_parser_result"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:text="解析结果:  "
            android:textColor="@color/colorDarkGray"
            android:textSize="16sp"
            android:visibility="visible" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:text="@string/start_ocr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:id="@+id/bt_ocr"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_press_style"
            android:onClick="ocrClick"
            android:layout_weight="1"/>

    </LinearLayout>

    <ProgressBar
        android:indeterminate="true"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.47"/>

</android.support.constraint.ConstraintLayout>
