<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ai.demo.ui.ContrastOpencvActivity">


    <ImageView
            android:scaleType="centerInside"
            android:layout_width="50dp"
            android:layout_height="30dp"
            app:srcCompat="@mipmap/back"
            android:id="@+id/iv_back"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="blackClick"
            android:contentDescription="@string/black"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <TextView
                android:text="@string/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/tv_title"
                android:textSize="16sp"
                android:textColor="@color/colorOrange"
                android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">

        <com.ai.demo.entity.CustomImageButton
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:textColor="@color/colorOrange"
                android:id="@+id/bt_card"
                android:text="1.上传身份证"
                android:textSize="12sp"
                android:background="@drawable/image_button_style"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                tools:targetApi="lollipop"
                tools:ignore="HardcodedText"
                android:onClick="addClick"/>
        <View
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        <com.ai.demo.entity.CustomImageButton
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:textColor="@color/colorOrange"
                android:id="@+id/bt_face"
                android:text="2.采集人像"
                android:textSize="12sp"
                android:background="@drawable/image_button_style"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                tools:targetApi="lollipop"
                android:onClick="addClick" tools:ignore="HardcodedText"/>


    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

        <Button
                android:text="@string/contrast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/bt_contrast"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_press_style"
                android:onClick="contrastClick"
                android:layout_weight="1"/>

    </LinearLayout>

    <ProgressBar
            android:indeterminate="true"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.47"/>

</android.support.constraint.ConstraintLayout>
